--- a/resources/lang/eng.ini
+++ b/resources/lang/eng.ini
@@ -3,8 +3,8 @@ language.name = English
 
 ; main command messages
 commands.makepluginplus = "makepluginplus"
-commands.makepluginplus.usage = "/makepluginplus <아이템 | 화살> <수명>"
-commands.makepluginplus.description = "엔티티의 수명을 설정"
+commands.makepluginplus.usage = "/makepluginplus <plugin name>"
+commands.makepluginplus.description = "Build the plugin"
 commands.makepluginplus.build-start = "Build the {%0} plugins"
 commands.makepluginplus.build = "Phar plugin {%0}_v{%1} has been created on {%2}"
 commands.makepluginplus.built = "Built the {%0} plugins"
