--- a/resources/locale/kor.yml
+++ b/resources/locale/kor.yml
@@ -5,8 +5,8 @@
 #빌드 전처리 설정
 preprocessing:
   #변수 이름 재정의 모드
-  #지원하는 모드 : protect(변수명 숨기기), disable(비활성화)
-  variable-renaming: protect
+  #지원하는 모드 : protect(변수명 숨기기), shorten(짧은 변수명), serial(순차적인 변수명), disable(비활성화)
+  variable-renaming: serial
 
   #사소한 코드 최적화
   minor-optimizating: true
