--- a/resources/locale/eng.yml
+++ b/resources/locale/eng.yml
@@ -4,17 +4,17 @@
 
 #Pre-processing settings
 preprocessing:
-  #Variable name rename mode
+  #Renaming mode settings
   #Modes Supported : protect(Hide variable), shorten, serial(Sequential variable), disable
-  variable-renaming: serial
+  renaming:
+    #Local variable
+    local-variable: serial
 
-  #Private property name rename mode
-  #Modes Supported : protect(Hide variable), shorten, serial(Sequential variable), disable
-  private-property-renaming: serial
+    #Private property
+    private-property: serial
 
-  #Private method name rename mode
-  #Modes Supported : protect(Hide variable), shorten, serial(Sequential variable), disable
-  private-method-renaming: serial
+    #Private method
+    private-method: serial
 
   #Minor code optimization
   minor-optimizating: true
