Support 'private-const-renaming'

--- a/resources/locale/eng.yml
+++ b/resources/locale/eng.yml
@@ -16,6 +16,9 @@ preprocessing:
     #Private method
     private-method: serial
 
+    #Private const
+    private-const: serial
+
   #Minor code optimization
   minor-optimizating: true
 
