--- a/resources/locale/eng.yml
+++ b/resources/locale/eng.yml
@@ -5,7 +5,7 @@
 #Pre-processing settings
 preprocessing:
   #Renaming mode settings
-  #Modes Supported : protect(Hide variable), shorten, serial(Sequential variable), space, md5(5 character hash text),  disable
+  #Modes Supported : protect(Hide variable), shorten, serial(Sequential variable), space, md5(5 character hash text),  false(disable)
   renaming:
     local-variable: serial
     private-property: serial
@@ -18,7 +18,7 @@ preprocessing:
     forcing: true
 
     #Import renaming  settings
-    #Modes Supported : {ALL renaming mode}, resolve(Remove import statement), disable
+    #Modes Supported : {ALL renaming mode}, resolve(Remove import statement), false(disable)
     renaming: serial
 
   #Minor code optimization
