--- a/resources/locale/kor.yml
+++ b/resources/locale/kor.yml
@@ -5,7 +5,7 @@
 #빌드 전처리 설정
 preprocessing:
   #이름 재정의 모드 설정
-  #지원하는 모드 : protect(변수명 숨기기), shorten(짧은 변수명), serial(순차적인 변수명), space(투명문자), md5(5글자 해쉬 텍스트), disable(비활성화)
+  #지원하는 모드 : protect(변수명 숨기기), shorten(짧은 변수명), serial(순차적인 변수명), space(투명문자), md5(5글자 해쉬 텍스트), false(비활성화)
   renaming:
     local-variable: serial
     private-property: serial
@@ -17,7 +17,7 @@ preprocessing:
     forcing: true
 
     #임포트 이름 재정의 모드 설정
-    #지원하는 모드 : {모든 이름 재정의 모드}, resolve(임포트 구문 제거), disable(비활성화)
+    #지원하는 모드 : {모든 이름 재정의 모드}, resolve(임포트 구문 제거), false(비활성화)
     renaming: serial
 
   #사소한 코드 최적화
